fixing h1 and watch demo button alignment

--- a/flask_app/static/style/style.css
+++ b/flask_app/static/style/style.css
@@ -184,7 +184,7 @@ header nav .nav-list .nav-item .account-dropdown {
   font-size: 12px;
   text-align: center;
   z-index: 1100;
-  width: auto;
+  width: 80%;
   background-color: transparent;
   padding-top: 15px;
 }
